==> cocoasuny/LIS3DH/STM32_HW6.0/Source/Drivers/MX25L1606E.c <==
#include "MX25L1606E.h"
#include "stm32l1xx.h"
#include "SPI.h"
#include "common.h"

void MX25_CS_Low(void)
{
    GPIO_ResetBits(GPIO_PORT_FLASH_CS,PT_GPIO_Pin_FLASH_CS);         // CS = 0
}

void MX25_CS_High(void)
{
	GPIO_SetBits(GPIO_PORT_FLASH_CS,PT_GPIO_Pin_FLASH_CS);			// CS = 1
}

ReturnMsg MX25_SPI_ReadWriteByte(SPI_TypeDef* SPIx,uint8_t tx_temp,uint8_t * rx_temp)
{
	uint16_t 	u16TimeOut;
	ReturnMsg 	mx25_state = FlashOperationSuccess;

	/* Check parameters */
	usr_para_check((SPIx == SPI1) || (SPIx == SPI2) || (SPIx == SPI3));
	usr_para_check(rx_temp != NULL);

	 /* Send byte through the SPIx peripheral */
    SPI_I2S_SendData(SPIx,tx_temp);

	/* Loop while DR register in not emplty */
	u16TimeOut = EEPROM_TIMEOUT_CNT;
    while (--u16TimeOut != 0u && SPI_I2S_GetFlagStatus(SPIx, SPI_I2S_FLAG_TXE) == RESET);

	if(!u16TimeOut)
	{
		mx25_state = FlashTimeOut;
		return mx25_state;
	}

    /* Wait to receive a byte */
	u16TimeOut = EEPROM_TIMEOUT_CNT;
    while (--u16TimeOut != 0u && SPI_I2S_GetFlagStatus(SPIx, SPI_I2S_FLAG_RXNE) == RESET);

	if(!u16TimeOut)
	{
		mx25_state = FlashTimeOut;
	}
	else
	{
		*rx_temp = (uint8_t)SPI_I2S_ReceiveData(SPIx);
	}

    /* Return the operation state from the SPI bus */
    return mx25_state;
}
