==> EmbeddedSystemClass/remote_control_51822/STM32_Boot/Drivers/Drv/MX25L1606E.c <==
#include "MX25L1606E.h"
#include "platform.h"
#include "stm32f2xx_hal.h"

void MX25_CS_Low(void)
{
    HAL_GPIO_WritePin(FLASH_SPI_CS_GPIO_Port, FLASH_SPI_CS_Pin, GPIO_PIN_RESET);        // CS = 0
}

void MX25_CS_High(void)
{
	HAL_GPIO_WritePin(FLASH_SPI_CS_GPIO_Port, FLASH_SPI_CS_Pin, GPIO_PIN_SET);			// CS = 1
}

ReturnMsg MX25_SPI_ReadWriteByte(SPI_HandleTypeDef *hspi,uint8_t tx_temp,uint8_t * rx_temp)
{
	ReturnMsg 	mx25_state = FlashOperationSuccess;
    HAL_StatusTypeDef state = HAL_OK;
    
    state = HAL_SPI_TransmitReceive(hspi, &tx_temp, rx_temp, 1, 100);
    if(HAL_OK != state)
    {
        mx25_state = FlashWriteRegFailed;
        EnterAppError(BOOT_ERROR_CODE_ERASE_FAIL);
        Usr_Error_Handler(__FILE__, __LINE__, state);
    }
    else
    {
        mx25_state = FlashOperationSuccess;
    }

    /* Return the operation state from the SPI bus */
    return mx25_state;
}
